# velocity-client

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  gen_logo_svg.py
.github/workflows/: ci.yml  release.yml
assets/: main.css
src/: app.rs  main.rs  state.rs  updater.rs  voice.rs  voice_audio.rs
src/gateway/: mod.rs
src/http/: mod.rs
src/ui/: channel_list.rs  context_menu.rs  guild_channel_list.rs  guild_member_list.rs  layout.rs  login_form.rs  markdown.rs  message_list.rs  metrics_overlay.rs  mod.rs  settings_modal.rs  sidebar.rs  toast.rs  user_card.rs  welcome_modal.rs
